Add a jenkins rule to the Makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,9 @@ macos:
 mingw:
 	gcc -O3 -g -fPIC -Wall -shared -o libdatetimeformatter.dll datetimeformatter.c -I/usr/local/include/ -L/usr/local/lib -llua54
 
+jenkins:
+	gcc -O3 -g -fPIC -Wall -shared -o libdatetimeformatter.dll datetimeformatter.c -I../../lua-5.4.6/include/ -L../../lua-5.4.6/lib/ -llua54
+
 install:
 	mkdir -p /usr/local/lib	# just for ensuring that the dest dir exists
 	mkdir -p /usr/local/include	# just for ensuring that the dest dir exists
