Add a rule for vm jenkins

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,9 @@ mingw:
 jenkins:
 	gcc -O3 -g -fPIC -Wall -shared -o libdatetimeformatter.dll datetimeformatter.c -I../../lua-5.4.6/include/ -L../../lua-5.4.6/lib/ -llua54
 
+jenkins-vm:
+	gcc -O3 -g -fPIC -Wall -shared -o libdatetimeformatter.dll datetimeformatter.c -I../../current-dependencies/include/ -L../../current-dependencies/lib/ -llua54
+
 install:
 	mkdir -p /usr/local/lib	# just for ensuring that the dest dir exists
 	mkdir -p /usr/local/include	# just for ensuring that the dest dir exists
